--- a/Server/package.json
+++ b/Server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon server/index.js"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
